Night Shift Issue Resolved In Day View - Temporary Hack

--- a/src/main/webapp/app/entities/view-my-schedule/view-my-schedule.css
+++ b/src/main/webapp/app/entities/view-my-schedule/view-my-schedule.css
@@ -7,6 +7,10 @@
 	background-color: #4e7494;
 	box-shadow: inset 0 0 15px 0 rgba(0,0,0,.5);
 }
+.empShiftCalendar .cal-week-box [data-event-class] {
+    height: auto;
+    line-height: 25px;
+}
 .empShiftCalendar .day-shift {
 	background-color : rgb(255, 255, 167);
 }
